Add advanced world-customization page for profile settings with validation